[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashbytes-resilience"
version = "1.1.1"
description = "Unified resilience patterns — retry, circuit breaker, rate limiter, timeout, bulkhead, fallback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CrashBytes", email = "crashbytes@users.noreply.github.com" }]
keywords = ["resilience", "retry", "circuit-breaker", "rate-limiter", "timeout", "bulkhead"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1", "pytest-asyncio>=1.4", "mypy>=2.1.0", "ruff>=0.15.16"]

[project.urls]
Homepage = "https://github.com/CrashBytes/crashbytes-resilience"
Repository = "https://github.com/CrashBytes/crashbytes-resilience"
Issues = "https://github.com/CrashBytes/crashbytes-resilience/issues"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["crashbytes_resilience"]

[tool.coverage.report]
fail_under = 90
